@@ -63,9 +63,10 @@ author = 'The Typhon Developers'
 # built documents.
 #
 # The short X.Y version.
-version = '0.0.1'
+from typhon import __version__
+version = __version__
 # The full version, including alpha/beta/rc tags.
-release = '0.0.1'
+release = version
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
@@ -116,8 +117,8 @@ todo_include_todos = True
 
 # The theme to use for HTML and HTML Help pages.  See the documentation for
 # a list of builtin themes.
-html_theme = 'alabaster'
-#html_theme = 'sphinx_rtd_theme'
+#html_theme = 'alabaster'
+html_theme = 'sphinx_rtd_theme'
 
 # Theme options are theme-specific and customize the look and feel of a theme
 # further.  For a list of options available for each theme, see the
