@@ -22,7 +22,8 @@ setup(
     # Versions should comply with PEP440.  For a discussion on single-sourcing
     # the version across setup.py and the project code, see
     # https://packaging.python.org/en/latest/single_source_version.html
-    version='0.0.3',
+    from typhon import __version__
+    version=__version__,
 
     description='Tools for atmospheric research',
     long_description=long_description,
