@@ -1,2 +1,4 @@
 # -*- coding: utf-8 -*-
 
+__version__ = '0.0.4'
+
